--- a/css/style.production.css
+++ b/css/style.production.css
@@ -14,349 +14,405 @@ Text: #042A2B
 */
 
 * {
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-  }
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
 
 body {
-    background-color: #90B6AD;
-    color: #042A2B;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400;
-    font-size: larger;
-    line-height: 1.2;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    min-height: 100vh;
+  background-color: #90B6AD;
+  color: #042A2B;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  font-size: larger;
+  line-height: 1.2;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  min-height: 100vh;
 }
 
 .page__header {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    width: 100%;
-    padding: 20px;
-    background-color: #F08756;
-    opacity: 0.75;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  padding: 20px;
+  background-color: #F08756;
+  opacity: 0.75;
 }
 
 .page__header--item {
-    -webkit-box-flex: 0;
-        -ms-flex: 0 1 250px;
-            flex: 0 1 250px;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 250px;
+          flex: 0 1 250px;
 }
 
 .page__header--item:first-child {
-    height: 93px;
+  height: 93px;
 }
 
 .page__header--item:last-child {
-    -webkit-box-flex: 1;
-        -ms-flex-positive: 1;
-            flex-grow: 1;
-    text-align: right;
-    padding-top: 15px;
-  }
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  text-align: right;
+  padding-top: 15px;
+}
 
-  .page__main {
-    -webkit-box-flex: 1;
-        -ms-flex: 1 0 auto;
-            flex: 1 0 auto;
-  }
+.page__main {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 auto;
+          flex: 1 0 auto;
+}
 
 .profile {
-    max-width: 700px;
-    margin: 0 auto;
-    padding-top: 50px;
-  }
+  max-width: 700px;
+  margin: 0 auto;
+  padding-top: 50px;
+}
 
 h1, h2, h3 {
-    font-family: 'Merriweather', serif;
+  font-family: 'Merriweather', serif;
+}
+
+.workpage__h1, .contactpage__h1 {
+  display: flex;
+  justify-content: center;
+  padding: 12px 0;
 }
 
 .navigation-list {
-    list-style-type: none;
-  }
+  list-style-type: none;
+}
 
 .navigation-list li {
-    display: inline-block;
-    margin-left: 15px;
-  }
+  display: inline-block;
+  margin-left: 15px;
+}
 
 a {
-    color: #042A2B;
-    border-radius: 2px;
-    padding: 10px;
+  color: #042A2B;
+  border-radius: 2px;
+  padding: 10px;
 }
 
 a:hover, a:focus {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 a:active {
-    background-color: #90B6AD;
-    padding: 10px;
+  background-color: #90B6AD;
+  padding: 10px;
 }
 
 .main__a {
-    color: #E15514;
-    padding: 10px 0;
+  color: #E15514;
+  padding: 10px 0;
 }
 
 .main__a:active {
-    background-color: #042A2B;
-    padding: 10px 2px;
+  background-color: #042A2B;
+  padding: 10px 2px;
+}
+
+.contactpage__grid {
+display: -ms-grid;
+display: grid;
+-ms-grid-columns: 1fr 2fr 1fr;
+grid-template-columns: 1fr 2fr 1fr;
+margin: 0 60px;
+}
+
+.contactpage__griditem1 {
+padding-top: 130px;
+padding-left: 40px;
+font-size: 20px;
+font-weight: 400;
+line-height: 25px
+}
+
+.contactpage__griditem1 a {
+line-height: 35px;
+}
+
+.contactpage__griditem1 a:active {
+background-color: #F08756;
+padding: 10px;
+}
+
+.contactpage__griditem2 {
+padding-left: 30px;
+padding-top: 10px;
+}
+
+.contact-form {
+border: 1px solid #042A2B;
+padding: 20px 0 20px 20px;
+}
+
+.contact-form p {
+font-size: small;
+margin-top: -3px;
+}
+
+.email-input {
+margin-left: 45px;
 }
 
 button {
-    border: none;
-    display: inline-block;
-    font-family: inherit;
-    background-color: #F08756;
-    color: #042A2B;
-    text-decoration: none;
-    padding: 10px;
-    border-radius: 3px;
-    border-bottom: 2px solid rgba(0, 0, 0, 0.3);
-    -webkit-transition-duration: 0.2s;
-            transition-duration: 0.2s;
-    -webkit-transition-property: opacity;
-    transition-property: opacity;
-    
+  border: none;
+  display: inline-block;
+  font-family: inherit;
+  background-color: #F08756;
+  color: #042A2B;
+  text-decoration: none;
+  padding: 10px;
+  border-radius: 3px;
+  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+  -webkit-transition-duration: 0.2s;
+          transition-duration: 0.2s;
+  -webkit-transition-property: opacity;
+  transition-property: opacity;
+  
 }
 
 .button {
-    border: none;
-    display: inline-block;
-    font-family: inherit;
-    background-color: #F08756;
-    color: #042A2B;
-    text-decoration: none;
-    padding: 10px;
-    border-radius: 3px;
-    border-bottom: 2px solid rgba(0, 0, 0, 0.3);
-    -webkit-transition-duration: 0.2s;
-            transition-duration: 0.2s;
-    -webkit-transition-property: opacity;
-    transition-property: opacity;
-    
+  border: none;
+  display: inline-block;
+  font-family: inherit;
+  background-color: #F08756;
+  color: #042A2B;
+  text-decoration: none;
+  padding: 10px;
+  border-radius: 3px;
+  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+  -webkit-transition-duration: 0.2s;
+          transition-duration: 0.2s;
+  -webkit-transition-property: opacity;
+  transition-property: opacity;
+  
 }
 
 .button {
-    margin: 50px 0 30px 0;
+  margin: 50px 0 30px 0;
 }
 
 button:hover, button:focus,
 .button:hover, .button:focus {
-    cursor: pointer;
-    opacity: 0.85;
+  cursor: pointer;
+  opacity: 0.85;
 }
 
 .profile__portrait {
-    width: 250px;
-    height: auto;
-    float: left;
-    margin-right: 40px;
-    border-radius: 50%;
-    border-style: double;
-    border-color:#042A2B;
+  width: 250px;
+  height: auto;
+  float: left;
+  margin-right: 40px;
+  border-radius: 50%;
+  border-style: double;
+  border-color:#042A2B;
 }
 
 .profile__button {
-    margin-top: 40px;
+  margin-top: 40px;
 }
 
 .about__main {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    clear: both;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    padding-top: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  clear: both;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-top: 30px;
 }
+
 .about__main p {
-    padding: 0 250px;
-    text-align: justify;
+  padding: 0 250px;
+  text-align: justify;
 }
 
 .cheers {
-    line-height: 50px;
+  line-height: 50px;
 }
 
 .page__footer {
-    clear: both;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    text-align: center;
-    margin-top: 80px;
-    background-color: #042A2B;
-    opacity: 0.7;
-    padding: 20px 0;
+  clear: both;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+  margin-top: 80px;
+  background-color: #042A2B;
+  opacity: 0.7;
+  padding: 20px 0;
 }
 
 .page__footer p {
-    color: #010202;
-    margin: 10px 0;
+  color: #010202;
+  margin: 10px 0;
 }
 
 #about-picture {
-    width: 600px;
-    display: block;
+  width: 600px;
+  display: block;
 }
 
 .sun {
-    -webkit-animation-duration: 4s;
-            animation-duration: 4s;
-    -webkit-animation-name: color-change;
-            animation-name: color-change;
-    -webkit-animation-iteration-count: infinite;
-            animation-iteration-count: infinite;
-    -webkit-animation-direction: alternate;
-            animation-direction: alternate;
-    -webkit-animation-timing-function: linear;
-            animation-timing-function: linear;
-  }
+  -webkit-animation-duration: 4s;
+          animation-duration: 4s;
+  -webkit-animation-name: color-change;
+          animation-name: color-change;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  -webkit-animation-direction: alternate;
+          animation-direction: alternate;
+  -webkit-animation-timing-function: linear;
+          animation-timing-function: linear;
+}
 
-  .cloud-front {
-    -webkit-animation: 30s cloud-move infinite alternate linear;
-            animation: 30s cloud-move infinite alternate linear;
-  }
+.cloud-front {
+  -webkit-animation: 30s cloud-move infinite alternate linear;
+          animation: 30s cloud-move infinite alternate linear;
+}
 
-  .cloud-back {
-    -webkit-animation: 34s cloud-move-reverse infinite alternate linear;
-            animation: 34s cloud-move-reverse infinite alternate linear;
-  }
+.cloud-back {
+  -webkit-animation: 34s cloud-move-reverse infinite alternate linear;
+          animation: 34s cloud-move-reverse infinite alternate linear;
+}
 
 .grid {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 20px;    
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 20px;    
 }
 
 .grid__item {
-    background-color: lightgray;
-    padding: 20px;
+  background-color: lightgray;
+  padding: 20px;
+}
+
+.grid__item:last-child {
+  -ms-grid-column: 3;
+  grid-column: 3 / 3;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  grid-row: 1 / 3;
+}
+
+@media all and (max-width: 500px) {
+  .grid, .contactpage__grid {
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+  }
+}
+
+@media all and (min-width: 500px) and (max-width: 750px){
+  .grid {
+    -ms-grid-columns: 1fr 20px 1fr;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .contactpage__grid {
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+  }
+}
+
+@media all and (max-width: 750px) {
+  .grid {
+    grid-gap: 10px;
   }
 
   .grid__item:last-child {
-    -ms-grid-column: 3;
-    grid-column: 3 / 3;
-    -ms-grid-row: 1;
-    -ms-grid-row-span: 2;
-    grid-row: 1 / 3;
+      grid-column: auto / auto;
+      grid-row: auto / auto;
+    }
+  
+  h1 {
+    font-size: 22px;
   }
+}
 
-  @media all and (max-width: 500px) {
-    .grid {
-      -ms-grid-columns: 1fr;
-      grid-template-columns: 1fr;
-    }
+@-webkit-keyframes color-change {
+  0% {
+    fill: #edc655;
   }
-
-  @media all and (min-width: 500px) and (max-width: 750px){
-    .grid {
-      -ms-grid-columns: 1fr 20px 1fr;
-      grid-template-columns: 1fr 1fr;
-    }
+  50% {
+    fill: #fcffad;
   }
-
-  @media all and (max-width: 750px) {
-    .grid {
-      grid-gap: 10px;
-    }
-
-    .grid__item:last-child {
-        grid-column: auto / auto;
-        grid-row: auto / auto;
-      }
-    
-    h1 {
-      font-size: 22px;
-    }
+  100% {
+    fill: #f76414;
   }
+}
 
-  @-webkit-keyframes color-change {
-    0% {
-      fill: #edc655;
-    }
-    50% {
-      fill: #fcffad;
-    }
-    100% {
-      fill: #f76414;
-    }
+@keyframes color-change {
+  0% {
+    fill: #edc655;
   }
+  50% {
+    fill: #fcffad;
+  }
+  100% {
+    fill: #f76414;
+  }
+}
 
-  @keyframes color-change {
-    0% {
-      fill: #edc655;
-    }
-    50% {
-      fill: #fcffad;
-    }
-    100% {
-      fill: #f76414;
-    }
+@-webkit-keyframes cloud-move {
+  from {
+    -webkit-transform: translate(0, 50px);
+            transform: translate(0, 50px);
   }
+  to {
+    -webkit-transform: translate(200px, 50px);
+            transform: translate(200px, 50px);
+  }
+}
 
-  @-webkit-keyframes cloud-move {
-    from {
-      -webkit-transform: translate(0, 50px);
-              transform: translate(0, 50px);
-    }
-    to {
-      -webkit-transform: translate(200px, 50px);
-              transform: translate(200px, 50px);
-    }
+@keyframes cloud-move {
+  from {
+    -webkit-transform: translate(0, 50px);
+            transform: translate(0, 50px);
   }
+  to {
+    -webkit-transform: translate(200px, 50px);
+            transform: translate(200px, 50px);
+  }
+}
 
-  @keyframes cloud-move {
-    from {
-      -webkit-transform: translate(0, 50px);
-              transform: translate(0, 50px);
-    }
-    to {
-      -webkit-transform: translate(200px, 50px);
-              transform: translate(200px, 50px);
-    }
+@-webkit-keyframes cloud-move-reverse {
+  from {
+    -webkit-transform: translate(446px, 48px);
+            transform: translate(446px, 48px);
   }
+  to {
+    -webkit-transform: translate(100px, 48px);
+            transform: translate(100px, 48px);
+  }
+}
 
-  @-webkit-keyframes cloud-move-reverse {
-    from {
-      -webkit-transform: translate(446px, 48px);
-              transform: translate(446px, 48px);
-    }
-    to {
-      -webkit-transform: translate(100px, 48px);
-              transform: translate(100px, 48px);
-    }
+@keyframes cloud-move-reverse {
+  from {
+    -webkit-transform: translate(446px, 48px);
+            transform: translate(446px, 48px);
   }
-
-  @keyframes cloud-move-reverse {
-    from {
-      -webkit-transform: translate(446px, 48px);
-              transform: translate(446px, 48px);
-    }
-    to {
-      -webkit-transform: translate(100px, 48px);
-              transform: translate(100px, 48px);
-    }
+  to {
+    -webkit-transform: translate(100px, 48px);
+            transform: translate(100px, 48px);
   }
+}
