--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
 Colors
 
 Primary: #90B6AD
-Secondary: #90B6AD
+Secondary: #F08756
 Text: #042A2B
 */
 
@@ -198,6 +198,30 @@ button:hover, button:focus,
 
 .cheers {
     line-height: 50px;
+}
+
+hr {
+  background-color: #4f9ab8;
+  border: var(--text-color);
+  height: 3px;
+  width: 350px;
+}
+
+table {
+  background-color: var(--text-color);
+}
+
+thead {
+  background-color: #4f9ab8;
+}
+
+tbody {
+  background-color: var(--primary-color);
+}
+
+th, td {
+  padding: 7px 10px;
+  text-align: center;
 }
 
 .page__footer {
