--- a/css/style.production.css
+++ b/css/style.production.css
@@ -71,7 +71,7 @@ body {
 
 .profile {
   max-width: 700px;
-  margin: auto;
+  margin: 0 auto;
   padding-top: 50px;
 }
 
@@ -147,12 +147,13 @@ padding: 10px;
 
 .contactpage__griditem2 {
 padding-left: 30px;
+padding-right: 30px;
 padding-top: 10px;
 }
 
 .contact-form {
 border: 1px solid #042A2B;
-padding: 20px 0 20px 20px;
+padding: 20px;
 }
 
 .contact-form p {
