--- a/css/style.production.css
+++ b/css/style.production.css
@@ -133,7 +133,8 @@ padding-top: 130px;
 padding-left: 40px;
 font-size: 20px;
 font-weight: 400;
-line-height: 25px
+line-height: 25px;
+margin: auto;
 }
 
 .contactpage__griditem1 a {
@@ -149,6 +150,7 @@ padding: 10px;
 padding-left: 30px;
 padding-right: 30px;
 padding-top: 10px;
+margin: auto;
 }
 
 .contact-form {
