--- a/css/style.production.css
+++ b/css/style.production.css
@@ -155,7 +155,12 @@ margin: auto;
 
 .contact-form {
 border: 1px solid #042A2B;
-padding: 20px;
+padding: 3vh 2.5vw;
+}
+
+textarea {
+  height: 20vh;
+  width: 100%;
 }
 
 .contact-form p {
