--- a/css/style.production.css
+++ b/css/style.production.css
@@ -392,8 +392,8 @@ th, td {
   .mobile-only {
     display: block;
     border: 1px solid #042A2B;
-    margin: 2vh 2.5vw;
-    padding: 2vh 1vw;
+    padding: 1vh 1vw 2vh 1vw;
+    margin: 3vh auto 0 auto;
     text-align: center;
   }
 }
@@ -407,10 +407,7 @@ th, td {
       grid-column: auto / auto;
       grid-row: auto / auto;
     }
-  
-  h1 {
-    font-size: 22px;
-  }
+
 }
 
 @-webkit-keyframes color-change {
