--- a/css/style.production.css
+++ b/css/style.production.css
@@ -67,6 +67,7 @@ body {
   -webkit-box-flex: 1;
       -ms-flex: 1 0 auto;
           flex: 1 0 auto;
+          align-items: center;
 }
 
 .profile {
