--- a/css/style.production.css
+++ b/css/style.production.css
@@ -331,7 +331,8 @@ th, td {
   display: grid;
   -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 20px;    
+  grid-gap: 20px;  
+  padding: 0 2vw;  
 }
 
 .grid__item {
@@ -368,6 +369,18 @@ th, td {
     padding: 2vh 1vw;
     text-align: center;
   }
+
+  .about__main p {
+    padding: 0 5vw;
+  }
+
+  .about__main h1 {
+    padding: 0 2vw;
+  }
+
+  .about__main table {
+    margin: 0 2vw;
+  }
 }
 
 @media all and (min-width: 500px) and (max-width: 927px){
@@ -395,6 +408,18 @@ th, td {
     padding: 1vh 1vw 2vh 1vw;
     margin: 3vh auto 0 auto;
     text-align: center;
+  }
+
+  .about__main p {
+    padding: 0 5vw;
+  }
+
+  .about__main h1 {
+    padding: 0 2vw;
+  }
+
+  .about__main table {
+    margin: 0 2vw;
   }
 }
 
