--- a/css/style.production.css
+++ b/css/style.production.css
@@ -294,8 +294,13 @@ th, td {
 }
 
 .page__footer p {
-  color: #010202;
+  color: #E15514;
   margin: 10px 0;
+}
+
+.svg-color {
+  -webkit-filter: invert(44%) sepia(21%) saturate(7497%) hue-rotate(354deg) brightness(91%) contrast(93%);
+          filter: invert(44%) sepia(21%) saturate(7497%) hue-rotate(354deg) brightness(91%) contrast(93%)
 }
 
 #about-picture {
