--- a/css/style.production.css
+++ b/css/style.production.css
@@ -129,15 +129,10 @@ grid-template-columns: 1fr 2fr 1fr;
 
 .contactpage__griditem1 {
 padding-top: 130px;
-padding-left: 40px;
+padding-left: 60px;
 font-size: 20px;
 font-weight: 400;
-line-height: 25px;
 margin: auto;
-}
-
-.contactpage__griditem1 a {
-line-height: 35px;
 }
 
 .contactpage__griditem1 a:active {
@@ -150,6 +145,13 @@ padding-left: 30px;
 padding-right: 30px;
 padding-top: 10px;
 margin: auto;
+}
+
+.contactpage__griditem3 {
+  padding-top: 130px;
+  font-size: 20px;
+  font-weight: 400;
+  margin: auto;
 }
 
 .mobile-only {
@@ -363,6 +365,10 @@ th, td {
     display: none;
   }
 
+  .contactpage__griditem3 {
+    display: none;
+  }
+
   .navigation-list li {
     display: block;
   }
@@ -403,6 +409,10 @@ th, td {
     display: none;
   }
 
+  .contactpage__griditem3 {
+    display: none;
+  }
+
   .navigation-list li {
     display: block;
   }
@@ -421,6 +431,7 @@ th, td {
 
   .about__main h1 {
     padding: 0 2vw;
+    text-align: center;
   }
 
   .about__main table {
