--- a/css/styles.css
+++ b/css/styles.css
@@ -123,7 +123,8 @@ a:active {
   line-height: 35px;
 }
 
-.contactpage__griditem1 a:active {
+.contactpage__griditem1 a:active,
+.contactpage__griditem3 a:active  {
   background-color: var(--secondary-color);
   padding: var(--button-padding);
 }
