--- a/css/style.production.css
+++ b/css/style.production.css
@@ -362,37 +362,12 @@ th, td {
     grid-template-columns: 1fr;
   }
 
-  .contactpage__griditem1 {
-    display: none;
-  }
-
-  .contactpage__griditem3 {
-    display: none;
-  }
-
-  .navigation-list li {
-    display: block;
-  }
-
   .mobile-only {
     display: block;
     border: 1px solid #042A2B;
     margin: 2vh 2.5vw;
     padding: 2vh 1vw;
     text-align: center;
-  }
-
-  .about__main p {
-    padding: 0 5vw;
-  }
-
-  .about__main h1 {
-    padding: 0 2vw;
-    text-align: center;
-  }
-
-  .about__main table {
-    margin: 0 2vw;
   }
 }
 
@@ -407,6 +382,20 @@ th, td {
     grid-template-columns: 1fr;
   }
 
+  .mobile-only {
+    display: block;
+    border: 1px solid #042A2B;
+    padding: 1vh 1vw 2vh 1vw;
+    margin: 3vh auto 0 auto;
+    text-align: center;
+  }
+}
+
+@media all and (max-width: 927px) {
+  .grid {
+    grid-gap: 10px;
+  }
+
   .contactpage__griditem1 {
     display: none;
   }
@@ -419,38 +408,42 @@ th, td {
     display: block;
   }
 
-  .mobile-only {
-    display: block;
-    border: 1px solid #042A2B;
-    padding: 1vh 1vw 2vh 1vw;
-    margin: 3vh auto 0 auto;
-    text-align: center;
-  }
-
-  .about__main p {
-    padding: 0 5vw;
-  }
-
-  .about__main h1 {
-    padding: 0 2vw;
-    text-align: center;
-  }
-
-  .about__main table {
-    margin: 0 2vw;
-  }
-}
-
-@media all and (max-width: 750px) {
-  .grid {
-    grid-gap: 10px;
-  }
-
   .grid__item:last-child {
       grid-column: auto / auto;
       grid-row: auto / auto;
     }
 
+  .about__main p {
+      padding: 0 5vw;
+    }
+  
+  .about__main h1 {
+      padding: 0 2vw;
+      text-align: center;
+    }
+  
+  .about__main table {
+      margin: 0 2vw;
+    }
+
+  .index__content--mobile {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: none;
+      margin: 0 2vw;
+      text-align: center;
+    }
+  
+  .index__content--mobile-item {
+      padding: none;
+      margin: none;
+    } 
+
+    .index__content--mobile-item.button {
+      margin-top: 3vh;
+    }
 }
 
 @-webkit-keyframes color-change {
