--- a/css/style.production.css
+++ b/css/style.production.css
@@ -412,8 +412,8 @@ th, td {
   display: grid;
   -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 20px;  
-  padding: 0 2vw;  
+  grid-gap: 10px;  
+  padding: 0 10px;  
 }
 
 .grid__item {
