--- a/css/styles.css
+++ b/css/styles.css
@@ -350,8 +350,8 @@ th, td {
 .grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 20px;  
-    padding: 0 2vw;  
+    grid-gap: 10px;  
+    padding: 0 10px;  
 }
 
 .grid__item {
