--- a/css/style.production.css
+++ b/css/style.production.css
@@ -91,6 +91,13 @@ body {
   padding-top: 50px;
 }
 
+.disclaimer {
+  background-color: #967f96;
+  font-size: 13px;
+  padding: 5px;
+  margin-top: 30px;
+}
+
 .section {
   margin-top: 45px;
   text-align: justify;
@@ -363,7 +370,7 @@ th, td {
       -ms-flex-direction: column;
           flex-direction: column;
   text-align: center;
-  margin-top: 80px;
+  margin-top: 5px;
   background-color: #042A2B;
   opacity: 0.7;
   padding: 20px 0;
