minor styling tweak

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -450,6 +450,10 @@ th, td {
     line-height: 33px;
   }
 
+  .disclaimer {
+    text-align: justify;
+  }
+
   .contactpage__griditem1 {
     padding-left: 30px;
   }
@@ -472,6 +476,10 @@ th, td {
     margin: 3vh auto 0 auto;
     text-align: justify;
     line-height: 33px;
+  }
+
+  .disclaimer {
+    text-align: justify;
   }
 
   .contactpage__griditem1 {
