--- a/css/styles.css
+++ b/css/styles.css
@@ -377,34 +377,43 @@ th, td {
     }
   
     .mobile-only {
-    display: block;
-    padding: 1vh 5vw 2vh 5vw;
-    margin: 3vh auto 0 auto;
-    text-align: justify;
-    line-height: 33px;
-  }
+      display: block;
+      padding: 1vh 5vw 2vh 5vw;
+      margin: 3vh auto 0 auto;
+      text-align: justify;
+      line-height: 33px;
+    }
+
+    .disclaimer {
+      text-align: justify;
+    }
 
     .contactpage__griditem1 {
       padding-left: 30px;
     }
   }
   
-  @media all and (min-width: 500px) and (max-width: 927px){
+  @media all and (min-width: 500px) and (max-width: 927px) {
     .grid {
       grid-template-columns: 1fr 1fr;
     }
-  
+
     .contactpage__grid {
       grid-template-columns: 1fr;
     }
-  
-     .mobile-only {
-    display: block;
-    padding: 1vh 5vw 2vh 5vw;
-    margin: 3vh auto 0 auto;
-    text-align: justify;
-    line-height: 33px;
-  }
+
+    .mobile-only {
+      display: block;
+      padding: 1vh 5vw 2vh 5vw;
+      margin: 3vh auto 0 auto;
+      text-align: justify;
+      line-height: 33px;
+    }
+
+    .disclaimer {
+      text-align: justify;
+    }
+
     .contactpage__griditem1 {
       padding-left: 30px;
     }
