--- a/css/styles.css
+++ b/css/styles.css
@@ -372,43 +372,53 @@ th, td {
   }
 
   @media all and (max-width: 500px) {
-    .grid, .contactpage__grid {
-      grid-template-columns: 1fr;
+    .grid,
+      .contactpage__grid {
+        grid-template-columns: 1fr;
+      }
+    
+    .mobile-only {
+      display: block;
+      padding: 1vh 5vw 2vh 5vw;
+      margin: 3vh auto 0 auto;
+      text-align: justify;
+      line-height: 33px;
+    }
+    
+    .disclaimer {
+      text-align: justify;
     }
   
-    .mobile-only {
-    display: block;
-    padding: 1vh 5vw 2vh 5vw;
-    margin: 3vh auto 0 auto;
-    text-align: justify;
-    line-height: 33px;
-  }
-
     .contactpage__griditem1 {
       padding-left: 30px;
     }
   }
   
   @media all and (min-width: 500px) and (max-width: 927px){
-    .grid {
-      grid-template-columns: 1fr 1fr;
+      .grid {
+        grid-template-columns: 1fr 1fr;
+      }
+    
+      .contactpage__grid {
+        grid-template-columns: 1fr;
+      }
+    
+      .mobile-only {
+        display: block;
+        padding: 1vh 5vw 2vh 5vw;
+        margin: 3vh auto 0 auto;
+        text-align: justify;
+        line-height: 33px;
+      }
+    
+      .disclaimer {
+        text-align: justify;
+      }
+    
+      .contactpage__griditem1 {
+        padding-left: 30px;
+      }
     }
-  
-    .contactpage__grid {
-      grid-template-columns: 1fr;
-    }
-  
-     .mobile-only {
-    display: block;
-    padding: 1vh 5vw 2vh 5vw;
-    margin: 3vh auto 0 auto;
-    text-align: justify;
-    line-height: 33px;
-  }
-    .contactpage__griditem1 {
-      padding-left: 30px;
-    }
-  }
   
   @media all and (max-width: 927px) {
     .grid {
